# HW21.2

./: main.py  pyproject.toml
html/: catalog_list.html  category_list.html  contacts_list.html  main_list.html
